<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Order_System</string>
    <string name="hello_world">Enter Details for Registration</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_order_page">order_page</string>
    <string name="title_activity_admin">admin</string>
    <string name="title_activity_admin_view">admin_view</string>
    <string name="title_activity_continued">continued</string>
    <string name="title_activity_main_activity_continued">main_activity_continued</string>
    <string name="title_activity_food_type">food_type</string>
    <string name="title_activity_mc_menu">mc_menu</string>
    <string name="title_activity_snacks_menu">snacks_menu</string>
    <string name="title_activity_thali_menu">thali_menu</string>
    <string name="roti">8</string>
    <string name="sp">150</string>
    <string name="mt">200</string>
    <string name="dosa">80</string>
    <string name="cc">200</string>
    <string name="cm">170</string>
    <string name="fr">75</string>
    <string name="mm">50</string>
    <string name="sp_d">Shahi Paneer</string>
    <string name="mt_d">Malai Tikka</string>
    <string name="d_d">Dosa</string>
    <string name="cm_d">Chicken Masala</string>
    <string name="cc_d">Chilly Chicken</string>
    <string name="fr_d">Fried Rice</string>
    <string name="roti_d">Tawa Roti</string>
    <string name="mm_d">Masala Masala</string>

</resources>
